--- a/lamp.html
+++ b/lamp.html
@@ -24,11 +24,12 @@ tr:nth-child(even) {
 <h1>Smart lamps</h1>
 <table>
   <tr> 
-    <th style="background-color:Tomato;">Red</th>
-    <th style="background-color: MediumSeaGreen;">Green</th>
-    <th style="background-color:DodgerBlue;">Blue</th>
-
+    <th style="background-color:Tomato;">Danger</th>
+    <th style="background-color:orange;">Vorried</th>
+    <th style="background-color: MediumSeaGreen;">Safe</th>
   </tr>
+  
+  <img src="pålsjöskog.jpg" style="width:100%" alt="Google Regional Map">
 
-</body>
+  </body>
 </html>
