--- a/lamp.html
+++ b/lamp.html
@@ -29,7 +29,7 @@ tr:nth-child(even) {
     <th style="background-color: MediumSeaGreen;">Safe</th>
   </tr>
   
-  <img src="pålsjöskog.jpg" style="width:100%" alt="Google Regional Map">
+  <img src="pålsjöskog.jpg" style="width:100%">
 
   </body>
 </html>
