--- a/lamp.html
+++ b/lamp.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 100px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
+  <title>LedLampor</title>
+  <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
 </head>
 <body>
 <h1>Smart lamps</h1>
+<img src="images/pålsjöskog.jpg" width="50%" height="50%">
+<div>
 <table>
   <tr> 
     <th style="background-color:Tomato;">Danger</th>
     <th style="background-color:orange;">Vorried</th>
     <th style="background-color: MediumSeaGreen;">Safe</th>
   </tr>
-  
-  <img src="pålsjöskog.jpg" style="width:100%">
-
+  </div>
   </body>
 </html>
