--- a/lamp.html
+++ b/lamp.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-<h1>Smart lamps</h1>
-<img src="images/pålsjöskog.jpg" width="50%" height="50%">
+<h1>Smart Lights</h1>
+<img src="images/pålsjöskog.jpg" width="50%" height="50%">
 <div>
 <table>
   <tr> 
