--- a/lamp.html
+++ b/lamp.html
@@ -4,18 +4,16 @@
   <title>LedLampor</title>
   <link rel="stylesheet" href="./style.css">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-<h1>Smart Lights</h1>
-<img src="images/pålsjöskog.jpg" width="50%" height="50%">
+<h1>Smart lamps</h1>
+<img src="images/pålsjöskog.jpg" width="50%" height="50%">
 <div>
 <table>
   <tr> 
-    <th style="background-color:Tomato;">Danger</th>
-    <th style="background-color:orange;">Vorried</th>
-    <th style="background-color: MediumSeaGreen;">Safe</th>
+    <th style="background-color:Tomato;">Danger <button type="button" onclick="alert('Du har bytt inställning!')">Byt färg!</button></th>
+    <th style="background-color:orange;">Vorried <button type="button" onclick="alert('Du har bytt inställning!')">Byt färg!</button></th>
+    <th style="background-color: MediumSeaGreen;">Safe <button type="button" onclick="alert('Du har bytt inställning!')">CByt färg!</button></th>
   </tr>
   </div>
   </body>
