--- a/lamp.html
+++ b/lamp.html
@@ -13,7 +13,7 @@
   <tr> 
     <th style="background-color:Tomato;">Danger <button type="button" onclick="alert('Du har bytt inställning!')">Byt färg!</button></th>
     <th style="background-color:orange;">Vorried <button type="button" onclick="alert('Du har bytt inställning!')">Byt färg!</button></th>
-    <th style="background-color: MediumSeaGreen;">Safe <button type="button" onclick="alert('Du har bytt inställning!')">CByt färg!</button></th>
+    <th style="background-color: MediumSeaGreen;">Safe <button type="button" onclick="alert('Du har bytt inställning!')">Byt färg!</button></th>
   </tr>
   </div>
   </body>
