--- a/lamp.html
+++ b/lamp.html
@@ -7,14 +7,16 @@
 </head>
 <body>
 <h1>Smart lamps</h1>
-<img src="images/pålsjöskog.jpg" width="50%" height="50%">
+<img src="images/pålsjöskog.jpg" width="50%" height="50%">
 <div>
 <table>
   <tr> 
     <th style="background-color:Tomato;">Danger <button type="button" onclick="alert('Du har bytt inställning!')">Byt färg!</button></th>
     <th style="background-color:orange;">Vorried <button type="button" onclick="alert('Du har bytt inställning!')">Byt färg!</button></th>
     <th style="background-color: MediumSeaGreen;">Safe <button type="button" onclick="alert('Du har bytt inställning!')">Byt färg!</button></th>
+    <th style="border: 2px solid black;">Spotlight <button type="button" onclick="alert('Du har bytt inställning!')">Byt färg!</button></th>
   </tr>
+
   </div>
   </body>
 </html>
