--- a/lamp.html
+++ b/lamp.html
@@ -12,7 +12,7 @@ body {
 
 /* Style the header */
 header {
-  background-color: #666;
+  background-color: rgb(255, 255, 255);
   padding: 30px;
   text-align: center;
   font-size: 35px;
