--- a/lamp.html
+++ b/lamp.html
@@ -44,7 +44,7 @@ function Function4() {
 <body>
   
   <header>
-    <h1><var id="myVar">Smart lamps</var></h1>
+    <h1 style="color:black;"><var id="myVar">Smart lamps</var></h1>
    
   </header>
 <img src="images/pålsjöskog.jpg" width="50%" height="50%">
