--- a/lamp.html
+++ b/lamp.html
@@ -34,7 +34,7 @@ function Function3() {
 }
 function Function4() {
   var x = document.getElementById("myVar");
-  x.style.color = "black";
+  x.style.color = "yellow";
 }
 </script>
   <title>LedLampor</title>
@@ -54,10 +54,11 @@ function Function4() {
     <th style="background-color:Tomato;">Danger <button type="button" onclick="Function1()">Byt färg!</button></th>
     <th style="background-color:orange;">Vorried <button type="button" onclick="Function2()">Byt färg!</button></th>
     <th style="background-color: MediumSeaGreen;">Safe <button type="button" onclick="Function3()">Byt färg!</button></th>
-    <th style="border: 2px solid black;">Spotlight <button type="button" onclick="Function4()">Byt färg!</button></th>
+    <th style="border: 4px solid yellow;">Spotlight <button type="button" onclick="Function4()">Byt färg!</button></th>
   </tr>
 
   </div>
   </body>
 </html>
+
 
