--- a/lamp.html
+++ b/lamp.html
@@ -48,6 +48,8 @@ function Function4() {
    
   </header>
 <img src="images/pålsjöskog.jpg" width="50%" height="50%">
+  <br>
+<button type="button" onclick="Function5()">Reset</button>
 <div>
 <table>
   <tr> 
