--- a/lamp.html
+++ b/lamp.html
@@ -36,6 +36,10 @@ function Function4() {
   var x = document.getElementById("myVar");
   x.style.color = "yellow";
 }
+function Function5() {
+  var x = document.getElementById("myVar");
+  x.style.color = "Black";
+}
 </script>
   <title>LedLampor</title>
   <link rel="stylesheet" href="./style.css">
@@ -48,7 +52,7 @@ function Function4() {
    
   </header>
 <img src="images/pålsjöskog.jpg" width="50%" height="50%">
-  <br>
+<br>
 <button type="button" onclick="Function5()">Reset</button>
 <div>
 <table>
