--- a/lamp.html
+++ b/lamp.html
@@ -54,6 +54,7 @@ function Function5() {
 <img src="images/pålsjöskog.jpg" width="50%" height="50%">
 <br>
 <button type="button" onclick="Function5()">Reset</button>
+<button type="button" onclick="alert('Smart Light är en webbsida som du kan välja färg i pålsjöskogs upplysta led som visas på bilden. Du väljer färgen utifrån din situation och färgen kommer att visas på din befintliga plats! Om du vill gå tillbaka till vanligt läge så tryck Reset knappen! För att veta villken färg som du har valt kan du se med villken färg som är på Smart lamps loggan!')">Info</button>
 <div>
 <table>
   <tr> 
