--- a/lamp.html
+++ b/lamp.html
@@ -10,7 +10,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Style the header */
+
 header {
   background-color: rgb(255, 255, 255);
   padding: 30px;
@@ -18,6 +18,35 @@ header {
   font-size: 35px;
   color: white;
 }
+* {
+  box-sizing: border-box;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  font-size: 40px;
+  text-align: center;
+}
+
+.flex-item-left {
+  background-color: #f1f1f1;
+  padding: 10px;
+  flex: 50%;
+}
+
+.flex-item-right {
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  flex: 50%;
+}
+
+
+@media (max-width: 800px) {
+  .flex-container {
+    flex-direction: column;
+  }
+
 </style>
 <script> 
 function Function1() {
@@ -54,18 +83,20 @@ function Function5() {
 <img src="images/pålsjöskog.jpg" width="50%" height="50%">
 <br>
 <button type="button" onclick="Function5()">Reset</button>
-<button type="button" onclick="alert('Smart Light är en webbsida som du kan välja färg i pålsjöskogs upplysta led som visas på bilden. Du väljer färgen utifrån din situation och färgen kommer att visas på din befintliga plats! Om du vill gå tillbaka till vanligt läge så tryck Reset knappen! För att veta villken färg som du har valt kan du se med villken färg som är på Smart lamps loggan!')">Info</button>
+<button type="button" onclick="alert('Smart Lamp är en webbsida som du kan välja färg i pålsjöskogs upplysta led som visas på bilden. Du väljer färgen utifrån din situation och färgen kommer att visas på din befintliga plats! Om du vill gå tillbaka till vanligt läge så tryck Reset knappen! För att veta villken färg som du har valt kan du se med villken färg som är på Smart lamps loggan!')">Info</button>
 <div>
-<table>
-  <tr> 
-    <th style="background-color:Tomato;">Danger <button type="button" onclick="Function1()">Byt färg!</button></th>
-    <th style="background-color:orange;">Vorried <button type="button" onclick="Function2()">Byt färg!</button></th>
-    <th style="background-color: MediumSeaGreen;">Safe <button type="button" onclick="Function3()">Byt färg!</button></th>
-    <th style="border: 4px solid yellow;">Spotlight <button type="button" onclick="Function4()">Byt färg!</button></th>
-  </tr>
+  <div class="flex-container">
+  <div style="background-color:Tomato;" class="flex-item-left">Danger <button type="button" onclick="Function1()">Byt färg!</button></div>
+  <div style="background-color:orange;"class="flex-item-right">Vorried<button type="button" onclick="Function2()">Byt färg!</button></div>
+  <div style="background-color: MediumSeaGreen;"class="flex-item-right">Safe <button type="button" onclick="Function3()">Byt färg!</button></div>
+  <div style="border: 4px solid yellow;"class="flex-item-right">Spotlight <button type="button" onclick="Function4()">Byt färg!</button></div>
+
+</div>
 
   </div>
   </body>
 </html>
+
+
 
 
