--- a/lamp.html
+++ b/lamp.html
@@ -88,7 +88,7 @@ function Function5() {
   <div class="flex-container">
   <div style="background-color:Tomato;" class="flex-item-left">Danger <button type="button" onclick="Function1()">Byt färg!</button></div>
   <div style="background-color:orange;"class="flex-item-right">Vorried<button type="button" onclick="Function2()">Byt färg!</button></div>
-  <div style="background-color: MediumSeaGreen;"class="flex-item-right">Safe <button type="button" onclick="Function3()">Byt färg!</button></div>
+  <div style="background-color: MediumSeaGreen;"class="flex-item-right">HELP!!  <button type="button" onclick="Function3()">Flashing!</button></div>
   <div style="border: 4px solid yellow;"class="flex-item-right">Spotlight <button type="button" onclick="Function4()">Byt färg!</button></div>
 
 </div>
